...
                    onTap: () => routerDelegate.pushPage(name: MapScreen.route),
                  ),
                  // Reports
                  DashCard(
                    row: 2,
                    imagePath: "assets/icons/report.png",
                    text: "Anonymous\nreports",
                    onTap: () => routerDelegate.pushPage(name: CreateReportScreen.route),
                  ),
                ])
              ],
            ),
          )),
...
